# ai-teaching-assistant

./: .env.development  .env.production  .env.staging  .gitignore  AI_SERVICE_CONFIGURATION.md  CHANGELOG.md  DEMO_README.md  FRONTEND_TEST_REPORT.md  INTEGRATION_TEST_REPORT.md  LICENSE  MIGRATION_GUIDE.md  PROJECT_INTEGRITY_REPORT.md  QWEN.md  README.md  REPORT_ANALYSIS_IMPROVEMENTS.md  TESTING_GUIDE.md  TEST_INTEGRATION_REPORT.md  TODO.md  TODO_zh-CN.md  check_system.py  dev-start.bat  dev-start.sh  docker-compose.cn.yml  docker-compose.yml  download_model.py  download_model_hf.py  final_test_chatglm.py  package-lock.json  pyrightconfig.json  quick_test_chatglm.py  setup_env.bat  setup_env.sh  simple_test.py  start_all.bat  start_api.bat  start_controller.bat  start_worker.bat  temp_openapi.json  test_api.py  test_api_qwen.py  (+7 more)
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.cn  INSTALLATION_SUMMARY.md  README.md  TEST_RESULTS.md  __init__.py  alembic.ini  check_and_migrate.py  check_config.py  check_db.py  cleanup_db.py  create_teacher_account.py  environment.yml  install_dependencies.bat  installed_packages.txt  pyproject.toml  pyrightconfig.json  requirements-production.txt  requirements.txt  test_api_direct.py  test_auth_api.py  test_fastchat_integration.py  test_fastchat_quick.py  test_login.py  test_output.txt  test_report_analysis_improvements.py  test_smart_qa.py
backend/alembic/: env.py
backend/api/: ai.py  analysis.py  assignments.py  auth.py  deps.py  evaluation.py  feedback_templates.py  files.py  grading.py  health.py  knowledge_base.py  personalized_feedback.py  qa.py  report_analysis.py  rubrics.py  students.py  submissions.py  sync.py  teachers.py  triage.py
backend/app/: __init__.py  main.py
backend/config/: default_rules.json
backend/core/: __init__.py  cache.py  config.py  database.py  dependencies.py  rate_limit.py  security.py  time.py
backend/data/: knowledge_base_seed.json  sync_log.json
backend/docs/: migration_guide.md
backend/models/: __init__.py  ai_interaction.py  analysis_result.py  answer.py  assignment.py  auth_log.py  base.py  code_file.py  feedback_template.py  grading_result.py  knowledge_base.py  plagiarism_check.py  qa_log.py  question.py  refresh_token.py  rubric.py  student.py  submission.py  teacher.py  token_blacklist.py  user.py
backend/schemas/: __init__.py  analysis.py  analysis_rules.py  assignment.py  assignment_crud.py  assignment_transfer.py  auth.py  code_analysis.py  common.py  evaluation.py  feedback.py  file_upload.py  (+11 more)
(+281 files in other folders)
